<resources>
    <string name="app_name">DnD 5e Pocket Assistant</string>
    <string name="logIn_TopTxt">Log In</string>
    <string name="SignUp_TopTxt">Sign Up</string>
    <string name="LogOut_Txt">Log Out</string>
    <string name="password_Txt">Password</string>
    <string name="username_Txt">Username</string>
    <string name="password_Txt_Rep">Repeat Password</string>
    <string name="show_pwd">Show Password</string>
    <string name="hide_pwd">Hide Password</string>
    <string name="forgot_pwd">Forgot Password ?</string>
    <string name="new_user">Not a member yet? Sign Up here.</string>
    <string name="already_user">Already have Account? Login here.</string>
    <string name="back_btn_Txt">Back</string>
    <string name="email_Txt">E-mail</string>
    <string name="sumbit">Submit</string>
    <string name="reg_email">Your registered e-mail</string>
    <string name="old_pwd">Your old password</string>
    <string name="new_pwd">Your new password</string>
    <string name="new_pwd_r">Repeat your new password</string>
    <string name="add_spell">+Add more spells</string>
    <string name="spell_book_txt">My Spell Book</string>
    <string name="spell_info_add_btn_txt">+Add this spell to your list</string>
    <string name="spell_description_txt">Description:</string>
    <string name="spell_higher_lvl_txt">Higher Level:</string>
    <string name="spell_page_txt">PH Page:</string>
    <string name="spell_range_txt">Range:</string>
    <string name="spell_components_txt">Components:</string>
    <string name="spell_materials_txt">Materials:</string>
    <string name="spell_ritual_txt">Ritual:</string>
    <string name="spell_duration_txt">Duration:</string>
    <string name="spell_concentration_txt">Concentration:</string>
    <string name="spell_casting_time_txt">Casting Time:</string>
    <string name="spell_level_txt">Level:</string>
    <string name="spell_school_txt">School:</string>
    <string name="spell_classes_txt">Classes:</string>
    <string name="spell_subclasses_txt">Subclasses:</string>
    <string name="delete_acc_btn_txt"><u>Delete Account</u></string>
    <string name="log_out_cont_desc">Log Out</string>
    <string name="reset_list_btn_txt">Reset List</string>
    <string name="cancel_btn_txt">CANCEL</string>
    <string name="done_btn_txt">DONE</string>
    <string name="settings_cont_desc">Settings</string>
    <string name="not_available">Not available.</string>
    <string name="confirm_txt">Are you sure ?</string>
    <string name="yes_btn_txt">Yes</string>
    <string name="no_btn_txt">No</string>
    <string name="press_dice_txt">Press the dice</string>
    <string name="dice_roller_title">Dice Roller</string>
</resources>
