<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <ProgressBar
        android:id="@+id/progressBarSignUp"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="20dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/SignUp_TopTxt"
            android:textColor="@color/titleDefault"
            android:textSize="24sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/username_SU"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@android:color/transparent"
            android:drawableStart="@drawable/userd"
            android:drawablePadding="10dp"
            android:foregroundGravity="left|center"
            android:gravity="center_vertical"
            android:hint="@string/username_Txt"
            android:inputType="textCapWords"
            android:padding="10dp"
            android:singleLine="true"
            android:textSize="16sp" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="2dp" />

        <EditText
            android:id="@+id/signup_EmailId"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="@android:color/transparent"
            android:drawableStart="@drawable/email"
            android:drawablePadding="10dp"
            android:gravity="center_vertical"
            android:hint="@string/email_Txt"
            android:inputType="textEmailAddress"
            android:padding="10dp"
            android:singleLine="true"
            android:textSize="16sp" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="2dp" />

        <EditText
            android:id="@+id/password_S"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="@android:color/transparent"
            android:drawableStart="@drawable/pwd"
            android:drawablePadding="10dp"
            android:gravity="center_vertical"
            android:hint="@string/password_Txt"
            android:inputType="textPassword"
            android:padding="10dp"
            android:singleLine="true"
            android:textSize="16sp" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="2dp" />

        <EditText
            android:id="@+id/repeatPassword"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="@android:color/transparent"
            android:drawableStart="@drawable/pwd"
            android:drawablePadding="10dp"
            android:gravity="center_vertical"
            android:hint="@string/password_Txt_Rep"
            android:inputType="textPassword"
            android:padding="10dp"
            android:singleLine="true"
            android:textSize="16sp" />

        <Button
            android:id="@+id/signUpBtn"
            android:layout_width="270dp"
            android:layout_height="60dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="15dp"
            android:background="@drawable/button_log_in_sign_up"
            android:padding="3dp"
            android:text="@string/SignUp_TopTxt"
            android:textColor="#FFB5B4B4"
            android:textSize="17sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/already_user"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/already_user"
            android:textSize="15sp" />

    </LinearLayout>

</RelativeLayout>