<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <ProgressBar
        android:id="@+id/progressBarLogIn"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true" />

    <LinearLayout
        android:id="@+id/login_layout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="false"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="false"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingTop="20dp"
        android:paddingRight="20dp">

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/logIn_TopTxt"
            android:textColor="@color/titleDefault"
            android:textSize="24sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/login_emailid"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@android:color/transparent"
            android:drawableStart="@drawable/email"
            android:drawablePadding="10dp"
            android:gravity="center_vertical"
            android:hint="@string/email_Txt"
            android:inputType="textEmailAddress"
            android:padding="10dp"
            android:singleLine="true"
            android:textSize="16sp" />

        <View
            android:id="@+id/view_1"
            android:layout_width="fill_parent"
            android:layout_height="3dp" />

        <EditText
            android:id="@+id/login_password"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:drawableStart="@drawable/pwd"
            android:drawablePadding="10dp"
            android:gravity="center_vertical"
            android:hint="@string/password_Txt"
            android:inputType="textPassword"
            android:padding="10dp"
            android:singleLine="true"
            android:textSize="16sp" />

        <View
            android:id="@+id/view_2"
            android:layout_width="match_parent"
            android:layout_height="8dp" />

        <CheckBox
            android:id="@+id/show_hide_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="202dp"
            android:layout_weight="1"
            android:text="@string/show_pwd"
            android:textSize="14sp" />

        <View
            android:id="@+id/view_"
            android:layout_width="match_parent"
            android:layout_height="3dp" />

        <Button
            android:id="@+id/loginBtn"
            android:layout_width="270dp"
            android:layout_height="60dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="0dp"
            android:layout_marginTop="3dp"
            android:background="@drawable/button_log_in_sign_up"
            android:padding="3dp"
            android:text="@string/logIn_TopTxt"
            android:textColor="#FFB5B4B4"
            android:textSize="17sp"
            android:textStyle="bold" />
    </LinearLayout>

    <TextView
        android:id="@+id/createAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login_layout"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:gravity="center"
        android:padding="0dp"
        android:text="@string/new_user"
        android:textSize="15sp" />

</RelativeLayout>